cabal-version:      3.0
name:               aoc24
version:            0.1.0.0
synopsis:           Solutions for Advent of Code 2024
-- description:
license:            MIT
license-file:       LICENSE
author:             Henning Thomann
maintainer:         henning.thomann@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aoc24
    import:           warnings
    main-is:          Main.hs
    other-modules:    Common.Util
                    , Day01
                    , Day02
                    , Day03
                    , Day04
                    , Day05
                    , Day06
                    , Day07
                    , Day08
                    , Day09
                    , Day10
                    , Day11
                    , Day12
                    , Day13
                    , Day14
                    , Day15
                    , Day16
                    , Day17
                    , Day18
                    , Day19
                    , Day20
                    , Day21
                    , Day22
                    , Day23
                    , Day24
                    , Day25
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
                    , src
    default-language: GHC2021
